--- a/css/style.css
+++ b/css/style.css
@@ -2905,6 +2905,14 @@ ul.product-controls {
   .service-section .row {
     flex-direction: column-reverse;
   }
+
+  .slicknav_nav .slicknav_item p {
+    padding: 0;
+    margin: 0;
+    display: inline;
+    text-decoration: none;
+    color: #fff;
+  }
 }
 
 /* Small : 320px */
