--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,10 @@ ol {
   top: 7px;
 }
 
+.inner-header .main-menu ul li p {
+  display: none;
+}
+
 /*---------------------
   Search Bar
 -----------------------*/
@@ -628,6 +632,7 @@ ol {
   padding: 100px 0;
   text-align: center;
   height: 100%;
+  min-height: 70vh;
 }
 
 .single-slider-item-info {
@@ -2627,9 +2632,6 @@ ul.product-controls {
     padding: 0 20%;
   }
 
-  .hero-items .owl-dots {
-    display: none;
-  }
   .inner-header .main-menu {
     margin-right: 0;
   }
@@ -2658,7 +2660,9 @@ ul.product-controls {
   .lookbok-left .single-slider-item {
     text-align: unset;
     padding: 50px 17% 0;
+    min-height: unset;
   }
+
   .lookbok-left p {
     color: #787878;
     font-size: 16px;
@@ -2742,6 +2746,7 @@ ul.product-controls {
     margin-top: 10px;
     position: relative;
   }
+
   .inner-header .header-right {
     margin-right: 20px;
     margin-top: 4px;
@@ -2769,6 +2774,9 @@ ul.product-controls {
   }
   .single-slider-item h2 {
     font-size: 42px;
+  }
+  .single-slider-item {
+    min-height: unset;
   }
   .single-product-item figure img {
     height: 160px;
@@ -2912,6 +2920,10 @@ ul.product-controls {
     display: inline;
     text-decoration: none;
     color: #fff;
+  }
+
+  .root-menu {
+    display: none !important;
   }
 }
 
