--- a/css/style.css
+++ b/css/style.css
@@ -776,12 +776,12 @@ ul.product-controls {
 
 .product--controls-tab:not(.product--controls-tab:first-child)::after {
   content: " ";
-  left: -24px;
+  left: -22px;
   transform: skew(-30deg, 0deg);
   box-shadow: rgb(0 0 0 / 10%) -3px 2px 5px, inset rgb(255 255 255 / 9%) 1px 0;
   position: absolute;
   top: 0;
-  height: 100%;
+  height: 102%;
   width: 35px;
   background-color: var(--second-color);
   border-radius: 8px 0 0 0;
@@ -789,76 +789,16 @@ ul.product-controls {
 .product--controls-tab::before {
   content: " ";
   border-radius: 0 8px 0 0;
-  right: -24px;
+  right: -22px;
   transform: skew(30deg, 0deg);
   box-shadow: rgb(0 0 0 / 10%) 3px 2px 5px, inset rgb(255 255 255 / 9%) -1px 0;
   position: absolute;
   top: 0;
-  height: 100%;
+  height: 102%;
   width: 35px;
   background-color: var(--second-color);
 }
 
-/* .product-filter .product-controls li::after {
-  display: block;
-  content: " ";
-  left: -24px;
-  transform: skew(-30deg, 0deg);
-  box-shadow: rgb(0 0 0 / 10%) -3px 2px 5px, inset rgb(255 255 255 / 9%) 1px 0;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 44px;
-  background-color: var(--second-color);
-  border-radius: 8px 0 0 0;
-}
-.product-filter .product-controls li::before {
-  display: block;
-  content: " ";
-  border-radius: 0 8px 0 0;
-  right: -24px;
-  transform: skew(30deg, 0deg);
-  box-shadow: rgb(0 0 0 / 10%) 3px 2px 5px, inset rgb(255 255 255 / 9%) -1px 0;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 44px;
-  background-color: var(--second-color);
-}
-
-.product-filter .product-controls li.product--controls-tab {
-  text-align: center;
-  padding: 10px 30px 10px;
-  color: var(--main-color);
-  background-color: var(--second-color);
-  z-index: 2;
-}
-
-.product-filter
-  .product-controls
-  li.product--controls-tab:hover:not(.product-filter
-    .product-controls
-    li.product--controls-tab.active),
-.product-filter
-  .product-controls
-  li.product--controls-tab:hover:not(.product-filter
-    .product-controls
-    li.product--controls-tab.active)::after,
-.product-filter
-  .product-controls
-  li.product--controls-tab:hover:not(.product-filter
-    .product-controls
-    li.product--controls-tab.active)::before {
-  background-color: #d4dcdf;
-  color: var(--main-color);
-}
-
-.product-filter .product-controls li.product--controls-tab.active,
-.product-filter .product-controls li.product--controls-tab.active::after,
-.product-filter .product-controls li.product--controls-tab.active::before {
-  background-color: #979fa3;
-  z-index: 3;
-} */
 .product-filter .product-controls li.product--controls-tab.active,
 .product-filter .product-controls li.product--controls-tab.active::after,
 .product-filter .product-controls li.product--controls-tab.active::before {
@@ -871,6 +811,29 @@ ul.product-controls {
 
 .product-filter .product-controls li:last-child {
   margin-right: 0;
+}
+
+.product-filter-menu {
+  width: 100%;
+  list-style: none;
+  margin-bottom: 50px;
+}
+
+.product-filter-menu li {
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+
+.product-filter-menu li:hover {
+  color: var(--main-color);
+}
+
+.product-filter-menu li.active {
+  color: var(--main-color);
 }
 
 .single-product-item {
