--- a/css/style.css
+++ b/css/style.css
@@ -2681,7 +2681,7 @@ ul.product-controls {
   }
 
   .modal .product-image {
-    height: 30vh;
+    height: 300px;
   }
 
   .col-product-image {
@@ -2877,7 +2877,7 @@ ul.product-controls {
   }
 
   .modal .product-image {
-    height: 25vh;
+    height: 30vh;
   }
 
   .col-product-image {
