--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,7 @@ ol {
   padding: 100px 0;
   text-align: center;
   height: 100%;
-  min-height: 70vh;
+  /* min-height: 70vh; */
 }
 
 .single-slider-item-info {
@@ -691,6 +691,43 @@ ol {
 .hero-items .owl-item.active .single-slider-item .primary-btn {
   -webkit-transition: all 0.5s ease 0.8s;
   transition: all 0.5s ease 0.8s;
+}
+
+.slider-mini .owl-nav {
+  display: block !important;
+}
+
+.slider-mini .owl-carousel .owl-item img {
+  height: 300px;
+}
+
+.slider-mini .hero-items .owl-nav button[type="button"] {
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  border-radius: unset;
+  opacity: 0;
+  left: 0;
+  width: 100px;
+  transition: all 0.2s ease;
+}
+
+.slider-mini .hero-items .owl-nav button[type="button"].owl-next {
+  left: auto;
+  right: 0;
+}
+
+.slider-mini .hero-items .owl-nav button[type="button"]:hover {
+  opacity: 0.5;
+}
+
+.slider-mini .owl-dots button {
+  width: 11px !important;
+  border-radius: 50% !important;
+}
+
+.img-service-distributive {
+  display: none;
 }
 
 /*---------------------
@@ -868,7 +905,7 @@ ul.product-controls {
 .single-product-item figure img {
   min-width: 100%;
   height: 220px;
-  object-fit: contain;
+  object-fit: cover;
   transition: all 0.5s ease;
 }
 
@@ -1073,38 +1110,8 @@ ul.product-controls {
   display: none;
 }
 
-.service-section .slider-mini {
-  display: flex;
-  height: 100%;
-  flex-flow: wrap;
-  flex-direction: column;
-  overflow: hidden;
-  cursor: grab;
-  position: relative;
-}
-
-.slider-mini-item {
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  transition: all 0.5s ease;
-}
-
 .service-section .service-item {
   cursor: pointer;
-}
-
-.slider-mini .dot-slide-mini {
-  height: 5px;
-  width: 100%;
-  position: absolute;
-  top: 90%;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .dot-slide-mini span {
@@ -2707,10 +2714,6 @@ ul.product-controls {
     height: 35%;
   }
 
-  .service-section .slider-mini {
-    height: 350px;
-  }
-
   .service-section .row {
     flex-direction: column-reverse;
   }
@@ -2901,9 +2904,6 @@ ul.product-controls {
 
   .col-product-image {
     height: 35%;
-  }
-  .service-section .slider-mini {
-    height: 350px;
   }
 
   .service-section .row {
