--- a/css/style.css
+++ b/css/style.css
@@ -1063,7 +1063,6 @@ ul.product-controls {
   -ms-flex-pack: center;
   justify-content: center;
   height: 120px;
-  opacity: 0.1;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -1083,6 +1082,10 @@ ul.product-controls {
 
 .service-section {
   margin-top: 100px;
+}
+
+.service-section h2 {
+  margin-bottom: 30px;
 }
 
 .service-list {
@@ -1110,8 +1113,137 @@ ul.product-controls {
   display: none;
 }
 
+.service-section iframe.iframe-nurture {
+  max-height: 420px;
+  margin: 0 auto;
+}
+
 .service-section .service-item {
   cursor: pointer;
+}
+
+.service-section .notepaper {
+  position: relative;
+  margin: 0 auto;
+  padding: 29px 20px 20px 45px;
+  width: 350px;
+  line-height: 30px;
+  color: #6a5f49;
+  text-shadow: 0 1px 1px white;
+  background-color: #f2f6c1;
+  background-image: -webkit-radial-gradient(
+      center,
+      cover,
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.1) 90%
+    ),
+    -webkit-repeating-linear-gradient(top, transparent, transparent 29px, rgba(
+            239,
+            207,
+            173,
+            0.7
+          )
+          29px, rgba(239, 207, 173, 0.7) 30px);
+  background-image: -moz-radial-gradient(
+      center,
+      cover,
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.1) 90%
+    ),
+    -moz-repeating-linear-gradient(top, transparent, transparent 29px, rgba(
+            239,
+            207,
+            173,
+            0.7
+          )
+          29px, rgba(239, 207, 173, 0.7) 30px);
+  background-image: -o-radial-gradient(
+      center,
+      cover,
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.1) 90%
+    ),
+    -o-repeating-linear-gradient(top, transparent, transparent 29px, rgba(
+            239,
+            207,
+            173,
+            0.7
+          )
+          29px, rgba(239, 207, 173, 0.7) 30px);
+  border: 1px solid #c3baaa;
+  border-color: rgba(195, 186, 170, 0.9);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5),
+    inset 0 0 5px #d8e071, 0 0 1px rgba(0, 0, 0, 0.1), 0 2px rgba(0, 0, 0, 0.02);
+  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 5px #d8e071,
+    0 0 1px rgba(0, 0, 0, 0.1), 0 2px rgba(0, 0, 0, 0.02);
+  display: none;
+}
+.service-section .notepaper:before,
+.service-section .notepaper:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+.service-section .notepaper:before {
+  left: 28px;
+  width: 2px;
+  border: solid #efcfad;
+  border-color: rgba(239, 207, 173, 0.9);
+  border-width: 0 1px;
+}
+.service-section .notepaper:after {
+  z-index: -1;
+  left: 0;
+  right: 0;
+  background: rgba(242, 246, 193, 0.9);
+  border: 1px solid rgba(170, 157, 134, 0.7);
+  -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(2deg);
+  -ms-transform: rotate(2deg);
+  -o-transform: rotate(2deg);
+  transform: rotate(2deg);
+}
+
+.service-section .quote {
+  font-family: inherit;
+  font-size: 14px;
+}
+
+.service-section .curly-quotes:before,
+.service-section .curly-quotes:after {
+  display: inline-block;
+  vertical-align: top;
+  height: 30px;
+  line-height: 48px;
+  font-size: 50px;
+  opacity: 0.2;
+}
+.service-section .curly-quotes:before {
+  content: "\201C";
+  margin-right: 4px;
+  margin-left: -8px;
+}
+.service-section .curly-quotes:after {
+  content: "\201D";
+  margin-left: 4px;
+  margin-right: -8px;
+}
+
+.service-section .quote-by {
+  display: block;
+  padding-right: 10px;
+  text-align: right;
+  font-size: 13px;
+  font-style: italic;
+  color: #84775c;
+}
+
+.service-section .lt-ie8 .notepaper {
+  padding: 15px 25px;
 }
 
 .dot-slide-mini span {
@@ -2200,7 +2332,7 @@ ul.product-controls {
 }
 
 /*---------------------
-  Cart Total Page 
+  Contact Page 
 -----------------------*/
 
 .contact-section {
@@ -2262,6 +2394,110 @@ ul.product-controls {
   font-weight: 500;
   list-style: none;
   line-height: 28px;
+}
+
+#toasts {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  flex-direction: column;
+  z-index: 9999;
+}
+
+.toast {
+  padding: 20px;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  animation: show_slide 1s ease forwards;
+  display: flex;
+  align-items: center;
+  border-left: 6px solid;
+  opacity: 1;
+  max-width: unset;
+}
+
+.toast.success {
+  background-color: rgba(0, 128, 0, 0.4);
+  border-color: rgb(0, 128, 0);
+}
+
+.toast.error {
+  background-color: rgba(255, 0, 0, 0.4);
+  border-color: rgb(255, 0, 0);
+}
+
+.toast i {
+  font-size: 28px;
+  color: white;
+}
+
+.toast .msg {
+  padding: 0 20px;
+  font-size: 16px;
+  color: white;
+}
+
+.countdown {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  z-index: 1;
+  animation: countdown 4s linear forwards;
+}
+
+.toast.success .countdown {
+  background-color: rgb(0, 128, 0);
+}
+
+.toast.warning .countdown {
+  background-color: rgb(255, 165, 0);
+}
+
+.toast.error .countdown {
+  background-color: rgb(255, 0, 0);
+}
+
+@keyframes countdown {
+  20% {
+    width: 100%;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes show_slide {
+  0% {
+    transform: translateX(100%);
+  }
+  40% {
+    transform: translateX(-10%);
+  }
+  80% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-10px);
+  }
+}
+
+@keyframes hide_slide {
+  0% {
+    transform: translateX(-10px);
+  }
+  40% {
+    transform: translateX(0%);
+  }
+  80% {
+    transform: translateX(-10%);
+  }
+  100% {
+    transform: translateX(120%);
+  }
 }
 
 .map {
