--- a/css/style.css
+++ b/css/style.css
@@ -1118,6 +1118,10 @@ ul.product-controls {
   font-size: 18px;
 }
 
+.service-list p:hover {
+  color: var(--main-color);
+}
+
 .service-section .single-slider-item {
   padding: 0;
 }
@@ -2813,6 +2817,7 @@ ul.product-controls {
   font-family: "Montserrat", sans-serif;
   margin: 0 0 15px 0;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .catalog-download span:hover {
